sample-nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  ports:
    - name: nginx-service
      port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
